Added all necessary fonts for project, and made custom classes for each

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gabriela&family=Gafata&family=Headland+One&family=Jacques+Francois&family=Jost&family=Karla&family=Mate+SC&family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
   <link rel="icon" href="" />
   <title>
     Alice Duff
