Ohhhh ir's spelt FAVICON anyways I made a custom one

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gabriela&family=Gafata&family=Headland+One&family=Jacques+Francois&family=Jost&family=Karla&family=Mate+SC&family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
-  <link rel="icon" href="" />
+  <link rel="icon" href="favicon.png" />
   <title>
     Alice Duff
   </title>
